--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: page
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Тут даже Басички не было</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Такой страницы нет :( Проврьте написание URL.</strong></p>
+  <p>HTTP 404: The requested page could not be found.</p>
 </div>
